syntax = "proto3";

option go_package = "/auth";

package auth;

service AuthService {
  rpc Login(LoginReq) returns (LoginResp);
  rpc SignUp(SignupReq) returns (SignupResp);
  rpc GetMe(GetMeReq) returns (GetMeResp);
}

message LoginReq {
  string email = 1;
  string password = 2;
}

message LoginResp {
  string token = 1;
}

message SignupReq {
  string email = 1;
  string password = 2;
  string username = 3;
}

message SignupResp {
  bool success = 1;
}

message GetMeReq {
  string id = 1;
}

message GetMeResp {
  string id = 1;
  string email = 2;
  string username = 3;
}